# NeoFarm

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  config.yml  docker-compose.yml
client/: pyproject.toml
client/farm_cli/: api.py  cli.py  profile.py  runner.py
exploits/: README.md  sploit_example.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  ws.ts
frontend/src/components/: Card.tsx  InstallModal.tsx  LiveBadge.tsx  StatusPill.tsx
frontend/src/pages/: Config.tsx  Dashboard.tsx  Exploits.tsx  Flags.tsx  Manual.tsx
scripts/: smoke.sh
server/: Dockerfile  pyproject.toml
server/farm/: config.py  db.py  deps.py  main.py  models.py  schemas.py  ws.py
server/farm/api/: config.py  exploits.py  flags.py  install.py  stats.py  teams.py  ws.py
server/farm/core/: flag_extractor.py
server/farm/protocols/: __init__.py  base.py  dummy.py  faustctf.py  forcad.py  ructf.py
server/farm/workers/: expirer.py  submitter.py
