[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "farm-server"
version = "0.1.0"
description = "CTF Attack/Defense flag farm — API, submitter, expirer."
requires-python = ">=3.14"
dependencies = [
  "fastapi>=0.136,<0.137",
  "uvicorn[standard]>=0.46,<0.47",
  "sqlalchemy[asyncio]>=2.0.49,<2.1",
  "asyncpg>=0.31,<0.32",
  "pydantic>=2.13,<2.14",
  "pydantic-settings>=2.14,<2.15",
  "pyyaml>=6.0.3,<7",
  "redis>=7.4,<8",
  "httpx>=0.28.1,<0.29",
  "websockets>=16.0,<17",
  "python-multipart>=0.0.26,<0.1",
]

[tool.setuptools.packages.find]
include = ["farm*"]
